--- a/src/css/servicecard.css
+++ b/src/css/servicecard.css
@@ -30,7 +30,7 @@
 }
 
 .ServiceCard p {
-    font-size: 14pt;
+    font-size: var(--text);
     font-weight: 700;
     color: var(--secondary-color);
     transition: .3s ease;
