--- a/src/css/header.css
+++ b/src/css/header.css
@@ -43,6 +43,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px 150px;
+    transition: 0.3s ease;
 }
 
 .header .logo {
@@ -98,4 +99,17 @@
     color: var(--primary-color);
     cursor: pointer;
     transition: .3s ease;
+}
+
+.fixed-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    z-index: 10000;
+    box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.2);
+    transition: 0.3s ease;
 }
