--- a/src/css/header.css
+++ b/src/css/header.css
@@ -82,6 +82,7 @@
 }
 
 .menu-button {
+    position: relative;
     background: none;
     border: 1px solid var(--secondary-color);
     color: var(--secondary-color);
@@ -89,14 +90,42 @@
     padding: 10px 12px;
     border-radius: 5px;
     outline: none;
-    transition: .3s ease;
+    overflow: hidden;
+    cursor: pointer;
+    transition: 0.3s ease;
 }
 
-.menu-button:hover {
-    background: var(--secondary-color);
+.menu-button  p{
+    position: relative;
+    font-size: var(--small-text);
+    z-index: 10;
+    transition: 0.3 ease 0.15s;
+}
+
+
+.menu-button  .animated_bg {
+    position: absolute;
+    pointer-events: none;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 100%;
+    background-color: var(--secondary-color);
+    transition: 0.3s ease;
     color: var(--primary-color);
-    cursor: pointer;
-    transition: .3s ease;
+}
+
+.menu-button:hover .animated_bg {
+    right: 0;
+    width: 100%;
+    transition: 0.3s ease;
+}
+
+.menu-button:hover p {
+    color: var(--primary-color);
+    transition: 0.3s ease;
 }
 
 .fixed-header {
