--- a/src/css/home.css
+++ b/src/css/home.css
@@ -91,12 +91,41 @@
 }
 
 .hero-section .container .hero-section-options .service-button {
+    position: relative;
+    overflow: hidden;
     transition: 0.3s ease;
 }
 
-.hero-section .container .hero-section-options .service-button:hover {
-    color: var(--primary-color);
+.hero-section .container .hero-section-options .service-button p{
+    position: relative;
+    font-size: var(--small-text);
+    z-index: 10;
+    transition: 0.3 ease 0.15s;
+}
+
+
+.hero-section .container .hero-section-options .service-button .animated_bg {
+    position: absolute;
+    pointer-events: none;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 100%;
     background-color: var(--secondary-color);
+    transition: 0.3s ease;
+    color: var(--primary-color);
+}
+
+.hero-section .container .hero-section-options .service-button:hover .animated_bg {
+    right: 0;
+    width: 100%;
+    transition: 0.3s ease;
+}
+
+.hero-section .container .hero-section-options .service-button:hover p {
+    color: var(--primary-color);
     transition: 0.3s ease;
 }
 
