--- a/src/css/servicecard.css
+++ b/src/css/servicecard.css
@@ -1,20 +1,21 @@
 .ServiceCard {
-    width: 350px;
-    height: 470px;
+    width: var(100% / 3 - 5px);
+    height: auto;
     flex-shrink: 1;
     padding: 25px;
     background: white;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    align-items: start;
+    gap: 20px;
+    gap: auto;
     transition: .3s ease;
 }
 
 .ServiceCard .service-icon {
-    width: 30px;
-    height: 30px;
+    width: 15%;
+    height: 60%;
     padding: 15px;
     display: flex;
     align-items: center;
@@ -29,6 +30,12 @@
     color: var(--primary-color);
 }
 
+.ServiceCard .service-info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .ServiceCard p {
     font-size: var(--text);
     font-weight: 700;
@@ -38,15 +45,6 @@
 
 .ServiceCard span {
     color: var(--text-color);
-}
-
-.ServiceCard ul {
-    padding: 0 15px;
-}
-
-.ServiceCard ul li {
-    color: var(--text-color);
-    margin: 5px 0;
 }
 
 .ServiceCard .service-button{
