--- a/src/css/InfoCard.css
+++ b/src/css/InfoCard.css
@@ -1,4 +1,5 @@
 .InfoCard {
+    width: 90%;
     background: white;
     padding: 20px;
     border-radius: 5px;
@@ -33,4 +34,10 @@
 .InfoCard .info_container h2 {
     font-size: var(--big-text);
     color: var(--secondary-color);
+}
+
+@media only screen and (max-width: 900px) {
+    .InfoCard {
+        flex-direction: column;
+    }
 }
