--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -102,3 +102,35 @@
     display: flex;
     gap: 20px;
 }
+
+@media only screen and (max-width: 1200px) {
+    .footer {
+        padding: 20px 50px;
+    }
+    
+}
+
+@media only screen and (max-width: 900px) {
+    .footer .bottom_container {
+        flex-direction: column;
+        gap: 20px;
+        padding: 20px 0;
+    }
+
+    .footer .bottom_container .copyright_container {
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .footer .info_container {
+        flex-direction: column;
+        align-items: center;
+    }  
+    
+    .footer .info_container .links,
+    .footer .info_container .company_info{
+        width: 100%;
+    }
+}
+
