--- a/src/css/header.css
+++ b/src/css/header.css
@@ -144,3 +144,52 @@
     box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.2);
     transition: 0.3s ease;
 }
+
+.header .vertical-menu-button {
+    display: none;
+    flex-direction: column;
+    gap: 8px;
+    width: 30px;
+    height: 30px;
+    justify-content: center;
+}
+
+.header .vertical-menu-button .bar {
+    width: 100%;
+    height: 2px;
+    border-radius: 2px;
+    background: var(--secondary-color);
+}
+
+.header .vertical-menu-button .middle {
+    width: 70%;
+    transition: .3s ease;
+}
+
+.header .vertical-menu-button:hover {
+    cursor: pointer;
+}
+
+.header .vertical-menu-button:hover .middle {
+    width: 100%;
+    transition: .3s ease;
+}
+
+@media screen and (max-width: 1000px) {
+
+    .contact-header {
+        padding: 10px 50px;
+    }
+
+    .header {
+        padding: 20px 50px;
+    }
+
+    .header .menu {
+        display: none;
+    }
+
+    .header .vertical-menu-button {
+        display: flex;
+    }
+}
