--- a/src/css/ServiceDetailPopup.css
+++ b/src/css/ServiceDetailPopup.css
@@ -135,3 +135,12 @@
     transform: translateX(10px);
     transition: .3s ease;
 }
+
+@media only screen and (max-width: 1000px) {
+    
+    .ServiceDetail {
+        padding: 0 50px;
+    }
+
+
+}
