--- a/src/css/VerticalMenu.css
+++ b/src/css/VerticalMenu.css
@@ -53,6 +53,7 @@
 .VerticalMenu .menu li {
     padding: 10px 20px;  
     transition: .3s ease;
+    color: var(--secondary-color);
 }
 
 .VerticalMenu .menu li:hover {
@@ -64,4 +65,13 @@
 .VerticalMenu .menu button {
     width: 85%;
     margin: 20px;
+}
+
+.VerticalMenu .menu-button {
+    color: var(--secondary-color);
+    border: 1px solid var(--secondary-color);
+}
+
+.VerticalMenu .menu-button:hover {
+    border: 1px solid var(--primary-color);
 }
