--- a/src/css/header.css
+++ b/src/css/header.css
@@ -46,7 +46,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 150px;
+    padding: 0 150px;
     transition: 0.3s ease;
 }
 
@@ -55,6 +55,10 @@
     font-weight: 700;
     text-decoration: none;
     color: var(--primary-color);
+}
+
+.header .logo img {
+    height: 100px;
 }
 
 .header .menu {
@@ -71,7 +75,7 @@
 
 .menu-option {
     list-style: none;
-    color: black;
+    color: white;
     font-weight: 500;
     transition: .3s ease;
 }
@@ -88,8 +92,8 @@
 .menu-button {
     position: relative;
     background: none;
-    border: 1px solid var(--secondary-color);
-    color: var(--secondary-color);
+    border: 1px solid white;
+    color: white;
     font-weight: 600;
     padding: 10px 12px;
     border-radius: 5px;
@@ -116,11 +120,14 @@
     bottom: 0;
     width: 0;
     height: 100%;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     transition: 0.3s ease;
     color: var(--primary-color);
 }
 
+.menu-button:hover{
+    border: 1px solid var(--primary-color);
+}
 .menu-button:hover .animated_bg {
     right: 0;
     width: 100%;
@@ -128,7 +135,7 @@
 }
 
 .menu-button:hover p {
-    color: var(--primary-color);
+    color: white;
     transition: 0.3s ease;
 }
 
@@ -137,7 +144,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(63, 63, 63, 0.5);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     z-index: 10000;
@@ -158,7 +165,7 @@
     width: 100%;
     height: 2px;
     border-radius: 2px;
-    background: var(--secondary-color);
+    background: var(--primary-color);
 }
 
 .header .vertical-menu-button .middle {
@@ -182,7 +189,7 @@
     }
 
     .header {
-        padding: 20px 50px;
+        padding: 0 50px;
     }
 
     .header .menu {
