--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,7 +1,7 @@
 .hero-section {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 500px;
 }
 
 .hero-section .heroBg {
@@ -13,7 +13,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    height: 100vh;
+    height: 500px;
 }
 
 .hero-section .container {
@@ -23,7 +23,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    height: 100vh;
+    height: 500px;
     z-index: 10;
     display: flex;
     flex-direction: column;
@@ -238,11 +238,24 @@
     color: var(--text-color);
 }
 
-.info-container .about-us-column .company-values {
+
+.info-container .about-us-column .company-image img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.values-section-title {
+    font-size: var(--sub-title);
+    font-weight: 700;
+    color: var(--secondary-color);
+}
+
+.info-container .company-values {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-top: 40px;
+    width: 50%;
+    margin-top: 20px;
 }
 
 .info-container .company-values .company-values-card {
@@ -500,7 +513,7 @@
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1000px) {
 
     .info-container {
         width: 100%;
@@ -516,11 +529,12 @@
     .info-container .second-column {
         width: 100%;
         flex-direction: column-reverse;
-        margin-top: 0;
+        margin-top: 20px;
         gap: 50px;
     }
 
-    .info-container .second-column .company-values {
+    .info-container .company-values {
+        width: 100%;
         margin-top: 10px;
     }
 
