--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,7 +1,8 @@
 .hero-section {
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 600px;
+    z-index: 0;
 }
 
 .hero-section .heroBg {
@@ -9,21 +10,21 @@
     background: url(../images/hero-consulting-KkA-Ji33.jpg) center no-repeat;
     background-size: cover;
     width: 100%;
-    top: 0;
+    top: -110px;
     bottom: 0;
     right: 0;
     left: 0;
-    height: 500px;
+    height: 710px;
 }
 
 .hero-section .container {
     position: absolute;
     background: linear-gradient(90deg, var(--secondary-color-80) 10%, var(--primary-color-80) 100%);
-    top: 0;
+    top: 0px;
     bottom: 0;
     right: 0;
     left: 0;
-    height: 500px;
+    height: 600px;
     z-index: 10;
     display: flex;
     flex-direction: column;
@@ -38,6 +39,7 @@
     justify-content: center;
     align-items: start;
     gap: 10px;
+    z-index: 100;
     color: white;
 }
 
