--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -93,14 +93,16 @@
 
 .footer .bottom_container {
     display: flex;
+    flex-direction: column;
+    gap: 10px;
     align-items: center;
     justify-content: space-between;
     padding: 20px 0;
 }
 
-.footer .bottom_container .terms_container {
-    display: flex;
-    gap: 20px;
+.footer .bottom_container #digitech {
+    color: var(--primary-color);
+    font-weight: 600;
 }
 
 @media only screen and (max-width: 1200px) {
