--- a/src/css/header.css
+++ b/src/css/header.css
@@ -173,7 +173,7 @@
     width: 100%;
     height: 2px;
     border-radius: 2px;
-    background: var(--primary-color);
+    background: white;
 }
 
 .header .vertical-menu-button .middle {
